unpackaged/main/default/objects/User/fields/Annual_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Commission_Rate__c</fullName>
    <defaultValue>0.015</defaultValue>
    <label>Annual Commission Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>