unpackaged/main/default/objects/User/fields/Annual_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quota__c</fullName>
    <formula>Quarter_1_Quota__c  +  Quarter_2_Total__c  +  Quarter_3_Quota__c  +  Quarter_4_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>