unpackaged/main/default/objects/User/fields/Base_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Commission_Rate__c</fullName>
    <defaultValue>0.03</defaultValue>
    <label>Base Commission Rate</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>