unpackaged/main/default/objects/User/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Pittsburgh</fullName>
            </value>
            <value>
                <fullName>San Antonio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>