unpackaged/main/default/objects/User/fields/Current_Bonus_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Bonus_Month__c</fullName>
    <formula>Month(Today())-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Bonus Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>