unpackaged/main/default/objects/User/fields/dfsle__CanManageAccount__c.field-meta.xml
<CustomField>
    <fullName>dfsle__CanManageAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can Manage DocuSign Account</description>
    <label>Can Manage DocuSign Account</label>
    <type>Checkbox</type>
</CustomField>