unpackaged/main/default/objects/User/fields/FlowTriggerQBRAssignment__c.field-meta.xml
<CustomField>
    <fullName>FlowTriggerQBRAssignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1/30/25 BM: Triggered by Flow: QBR Assignment Master Flow and reset by QBR Assignment User Sub-Flow.</description>
    <label>FlowTriggerQBRAssignment</label>
    <type>Checkbox</type>
</CustomField>