unpackaged/main/default/objects/User/fields/Last_Day_of_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_Last_Month__c</fullName>
    <formula>DATE(YEAR(TODAY()),MONTH(TODAY()),1)-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day of Last Month</label>
    <type>Date</type>
</CustomField>