unpackaged/main/default/objects/User/fields/Monthly_Bonus_Quota__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Bonus_Quota__c</fullName>
    <label>Monthly Bonus Quota</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>