unpackaged/main/default/objects/User/fields/Project_Manager_Monthly_Quota__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Monthly_Quota__c</fullName>
    <label>Project Manager Monthly Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>