unpackaged/main/default/objects/User/fields/Quarter_3_Quota__c.field-meta.xml
<CustomField>
    <fullName>Quarter_3_Quota__c</fullName>
    <label>Quarter 3 Quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>