unpackaged/main/default/objects/User/fields/Quarterly_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Commission_Rate__c</fullName>
    <defaultValue>0.03</defaultValue>
    <label>Quarterly Commission Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>