unpackaged/main/default/objects/User/fields/Sales_Month_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Month_1__c</fullName>
    <label>Sales Month 1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>