unpackaged/main/default/objects/User/fields/SpringCMEos__Portal_Only__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Portal_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SpringCM Portal Only</label>
    <type>Checkbox</type>
</CustomField>