unpackaged/main/default/objects/User/fields/SpringCMEos__SpringCM_EnabledEndDate__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__SpringCM_EnabledEndDate__c</fullName>
    <inlineHelpText>This is the date that the user becomes disabled in SpringCM.  Leave blank for never.  Put in today's date for immediately.</inlineHelpText>
    <label>SpringCM Enabled End Date</label>
    <type>Date</type>
</CustomField>