unpackaged/main/default/objects/User/fields/SpringCMEos__SpringCM_Persona__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__SpringCM_Persona__c</fullName>
    <description>Personas, or role-based user settings, displays different buttons and menu items depending upon the user's job function</description>
    <inlineHelpText>Type in the name of the Persona the user is to be assinged to.</inlineHelpText>
    <label>SpringCM Persona</label>
    <length>100</length>
    <type>Text</type>
</CustomField>