unpackaged/main/default/objects/User/fields/SpringCMEos__SpringCM_Role__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__SpringCM_Role__c</fullName>
    <inlineHelpText>-Guest (View Only Access)
-Limited Subscriber (Select access to features)
-Full Subscriber (Complete access to features)
-User Administrator (Complete access to features and some administrative power)
-Super Administrator (Full administrative power)</inlineHelpText>
    <label>SpringCM Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Subscriber</fullName>
                <default>true</default>
                <label>Full Subscriber</label>
            </value>
            <value>
                <fullName>Super Administrator</fullName>
            </value>
            <value>
                <fullName>User Administrator</fullName>
            </value>
            <value>
                <fullName>Limited Subscriber</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>