unpackaged/main/default/objects/User/fields/zkfedex__EncryptedFedExEndUserPassword__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EncryptedFedExEndUserPassword__c</fullName>
    <label>Encrypted FedEx End User Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>