unpackaged/main/default/objects/User/fields/zkfedex__FedExEndUserKey__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__FedExEndUserKey__c</fullName>
    <description>The FedEx End User Key obtained from ZenKraft Shipmate</description>
    <inlineHelpText>The FedEx End User Key obtained from ZenKraft Shipmate</inlineHelpText>
    <label>FedEx End User Key</label>
    <length>16</length>
    <type>Text</type>
</CustomField>