unpackaged/main/default/objects/User/fields/zkfedex__FedExEndUserPassword__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__FedExEndUserPassword__c</fullName>
    <description>The FedEx End User Password obtained from ZenKraft Shipmate</description>
    <inlineHelpText>The FedEx End User Password obtained from ZenKraft Shipmate</inlineHelpText>
    <label>FedEx End User Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>