unpackaged/main/default/objects/User/listViews/Active_Users_IPro.listView-meta.xml
<ListView>
    <fullName>Active_Users_IPro</fullName>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COMPANY_NAME</field>
        <operation>equals</operation>
        <value>IPro</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users - IPro</label>
    <language>en_US</language>
</ListView>