unpackaged/main/default/objects/User/listViews/ActiveUsersSales.listView-meta.xml
<ListView>
    <fullName>ActiveUsersSales</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.PHONE</columns>
    <columns>CORE.USERS.EXTENSION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.DEPARTMENT</field>
        <operation>equals</operation>
        <value>Sales</value>
    </filters>
    <label>Active Users - Sales Dept</label>
    <language>en_US</language>
    <sharedTo>
        <role>Austin_AE</role>
        <role>Austin_Branch_Manager</role>
        <role>Controller</role>
        <role>Dallas_AE</role>
        <role>Dallas_Branch_Manager</role>
        <role>Inside_Sales</role>
        <role>Major_Accounts</role>
        <role>Operations_Manager</role>
        <role>President</role>
        <role>Project_Manager</role>
        <role>Sales_Administrator</role>
        <role>Sales_Engineer</role>
        <role>San_Antonio_AE</role>
        <role>San_Antonio_Branch_Manager</role>
        <role>Support_Specialist_I</role>
        <role>Support_Specialist_II</role>
        <role>Support_Specialist_III</role>
    </sharedTo>
</ListView>