unpackaged/main/default/objects/User/listViews/All_Active_Customer_Service_Managers.listView-meta.xml
<ListView>
    <fullName>All_Active_Customer_Service_Managers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>Customer Service Manager</value>
    </filters>
    <label>All Active Customer Service Managers</label>
    <language>en_US</language>
</ListView>