unpackaged/main/default/objects/User/listViews/Inactive_Users1.listView-meta.xml
<ListView>
    <fullName>Inactive_Users1</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Users</label>
    <language>en_US</language>
    <sharedTo>
        <role>Accounting_Specialist</role>
        <role>Austin_AE</role>
        <role>Austin_Branch_Manager</role>
        <role>Austin_Independent_Partners</role>
        <role>Controller</role>
        <role>Dallas_AE</role>
        <role>Dallas_Branch_Manager</role>
        <role>Field_Service_Technician</role>
        <role>Houston_AE</role>
        <role>Houston_Branch_Manager</role>
        <role>Inside_Sales</role>
        <role>Major_Accounts</role>
        <role>Network_Manager</role>
        <role>Operations_Manager</role>
        <role>Pittsburgh_Branch_Manager</role>
        <role>President</role>
        <role>Project_Manager</role>
        <role>Sales_Administrator</role>
        <role>Sales_Engineer</role>
        <role>San_Antonio_AE</role>
        <role>San_Antonio_Branch_Manager</role>
        <role>Service_Manager</role>
        <role>Support_Specialist_I</role>
        <role>Support_Specialist_II</role>
        <role>Support_Specialist_III</role>
        <role>VP_Sales</role>
    </sharedTo>
</ListView>