unpackaged/main/default/objects/User/listViews/SpringCMEos__SpringCM_Users.listView-meta.xml
<ListView>
    <fullName>SpringCMEos__SpringCM_Users</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SpringCMEos__SpringCM_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SpringCM Users</label>
</ListView>